feat: introduce @MyMenu annotation for hierarchical menu ordering; replace Vaadin's Double-based ordering to prevent data loss and support unlimited levels